<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LangMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hey there Please Sign up!</string>
    <string name="register">Sign up</string>
    <string name="userNameSignUp">Username</string>
    <string name="RePasswordSignUp">pass</string>
    <string name="EmailSignUp">Email</string>
    <string name="PasswordSignUp">pass</string>
    <string name="title_activity_pram">LangMe</string>
    <string name="signin">Please Sign in:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="signInButton">Sign in</string>
    <string name="email">Email address:</string>
    <string name="title_activity_dash">Dashboard</string>
    <string name="newEntry">Post new entry</string>
    <string name="correctSomeEntries">Correct others posts</string>
    <string name="browserYourEntries">Browse your posts</string>
    <string name="title_activity_new_post">Publish new post</string>
    <string name="publish">Publish</string>

    <string-array name="langs">
        <item>English</item>
        <item>German</item>
        <item>Polish</item>
        <item>Arabic</item>
        <item>French</item>
    </string-array>

    <string name="title_activity_browser_by_lang">Last Enties</string>
    <string name="title_activity_post">LangMe</string>
    <string name="comments">Comments</string>
    <string name="addComment">Add comment</string>
    <string name="signOut">Sign out</string>
    <string name="title_sign_up">New user</string>
    <string name="help">To help others Please choose the language you want to correct before:</string>

</resources>
